Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43063

Setting item as its own parent should error out instead of hanging

    XMLWordPrintable

Details

    • 43c93a55e28a4655d8bc8d49a81b7802d7157244

    Description

      The following code hangs:

      import QtQuick 2.2
      import QtQuick.Window 2.1
      
      Window {
          visible: true
          width: 360
          height: 360
      
          Item {
              id: anitem
              parent: anitem
          }
      }
      

      QQuickItem::setParentItem should not allow setting itself as a parent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            mikkohar Mikko Harju
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes